HTML Code Completed

--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Play free on mobile - Spotify - Spotify (IN)</title>
+    <title>Create a LinkedIn Page _ LinkedIn Marketing Solutions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="./Images/icons8-linkedin-48.png"
+      type="image/x-icon"
     />
     <link
       rel="stylesheet"
@@ -18,13 +23,221 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="shortcut icon"
-      href="./Images/Favaicon.png"
-      type="image/x-icon"
-    />
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header>
+      <div class="header-left">
+        <img src="./Images/Logo.png" alt="Linkedin Logo" class="main-logo" />
+        <p class="support-heading">LinkedInMarketing Solutions</p>
+      </div>
+      <div class="header-right">
+        <button class="btn header-btn">Create ad</button>
+        <a href="#" class="header-share"
+          ><i class="fa-sharp fa-solid fa-arrow-up-from-square"></i
+        ></a>
+      </div>
+    </header>
+    <!-- Main Body -->
+    <div class="box-1">
+      <h1 class="box-1-heading">LinkedIn Pages</h1>
+      <p class="box-1-para">
+        Your central hub in the world’s largest professional network.
+      </p>
+      <button class="btn btn-box-1">Create your Page</button>
+    </div>
+    <div class="box-2">
+      <h2 class="box-2-heading">
+        Establish your organization’s presence and achieve results with LinkedIn
+        Pages
+      </h2>
+      <div class="box-2-description">
+        <div class="content-1">
+          <img
+            src="./Images/linkedin-pages-sr-11x-ill.png.original.png"
+            alt="11X Share"
+            class="content-img"
+          />
+          <p class="content-para">
+            Companies with completed and active pages get 11x more clicks per
+            follower.
+          </p>
+        </div>
+        <div class="content-2">
+          <img
+            src="./Images/linkedin-pages-sr-57m-ill.png.original.png"
+            alt="57 Million Share"
+            class="content-img"
+          />
+          <p class="content-para">
+            More than 57M companies have a page on LinkedIn.
+          </p>
+        </div>
+        <div class="content-3">
+          <img
+            src="./Images/linkedin-pages-sr-1.5b-ill.png.original.png"
+            alt="1.5 Billion"
+            class="content-img"
+          />
+          <p class="content-para">
+            LinkedIn Members interact with LinkedIn Pages over 1.5B times per
+            month.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="box-3">
+      <h2 class="box-3-heading">
+        See how LinkedIn Pages can help you achieve your business goals
+      </h2>
+      <p class="box-3-para">
+        Getting started is easy. Follow our guided setup process to
+        <a href="#" class="box-3-a">create a Page.</a>
+      </p>
+    </div>
+    <div class="box-4">
+      <img
+        src="./Images/03-dsk-v1.jpg.original.jpg"
+        alt="Linkedin App"
+        class="box-4-img"
+      />
+      <div class="box-4-content">
+        <h3 class="box-4-h3">Join the conversations that matter</h3>
+        <ul class="box-4-list">
+          <li>
+            Post, respond and edit your Page via mobile with the LinkedIn app
+          </li>
+          <li>Share PowerPoints, PDFs, and Word Docs</li>
+          <li>React and comment on hashtag feeds associated with your Page</li>
+          <li>
+            Connect with your community in real-time using
+            <a href="#" class="box-4-a">LinkedIn virtual events</a>solutions
+          </li>
+          <li>
+            Go deep on key topics that matter most to your community with<a
+              href="#"
+              class="box-4-a"
+              >LinkedIn Articles</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="box-5">
+      <div class="box-5-content">
+        <h3 class="box-5-h3">Know and grow your audience</h3>
+        <ul class="box-5-list">
+          <li>Discover content trending with your target audience</li>
+          <li>
+            Drive specific actions with a customizable call-to-action button
+          </li>
+          <li>
+            Monitor activity with visual analytics, including the ability to
+            view all of your Page followers individually
+          </li>
+          <li>
+            Tap into your product community to generate high quality leads with
+            <a href="#" class="box-5-a">Product Pages</a>
+          </li>
+        </ul>
+      </div>
+      <img
+        src="./Images/04-dsk-v1.jpg.original.jpg"
+        alt="Graph"
+        class="box-5-img"
+      />
+    </div>
+    <div class="box-6">
+      <img
+        src="./Images/05-dsk-v1.jpg.original.jpg"
+        alt="Chat Page"
+        class="box-6-img"
+      />
+      <div class="box-6-content">
+        <h3 class="box-6-h3">Engage your people</h3>
+        <ul class="box-6-list">
+          <li>Re-share your employees' best @mentions and LinkedIn content</li>
+          <li>
+            Notify employees of your most important Page posts to boost organic
+            reach
+          </li>
+          <li>
+            Recognize team moments or employees with a personalized shout-out
+            from your Page
+          </li>
+          <li>
+            oster internal engagement through a trusted, employee-only community
+            on LinkedIn via the<a href="#" class="box-6-a">"My Company" tab</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="box-7">
+      <h2 class="box-7-heading">
+        Already have a Page? Pair it with LinkedIn ads to accelerate business
+        growth
+      </h2>
+      <p class="box-7-para">
+        To get started you’ll need access to
+        <a href="#" class="box-7-a">Campaign Manager.</a>If you don’t have a
+        Campaign Manager account, it only takes a moment to
+        <a href="#" class="box-7-a">create one.</a>
+      </p>
+      <div class="navigation-pane">
+        <p class="nav-blue">Objective</p>
+        <p class="nav">Targeting</p>
+        <p class="nav">Ad Formats</p>
+        <p class="nav">Bidding & Budgeting</p>
+        <p class="nav">Measurement & Optimization</p>
+      </div>
+      <div class="nav-content">
+        <div class="box-7-left">
+          <p class="box-7-sub-heading">1. Choose your objective:</p>
+          <p class="box-7-sub-para">
+            Each campaign begins by choosing the objectives that matter most,
+            across awareness, consideration or conversions.
+          </p>
+        </div>
+        <div class="box-7-right">
+          <img
+            src="./Images/step1-v2.png.original.png"
+            alt="Interface"
+            class="box-7-img-2"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="box-8">
+      <h2 class="box-8-heading">
+        Take the next steps to growing your business today.
+      </h2>
+      <button class="btn btn-box-8">Create your Page</button>
+      <button class="btn btn-box-8">Create ad</button>
+    </div>
+    <!-- Footer -->
+    <footer>
+      <div class="line-1">
+        <a href="" class="footer-nav">About</a>
+        <a href="" class="footer-nav">Cookie Policy</a>
+        <a href="" class="footer-nav">Privacy Policy</a>
+        <a href="" class="footer-nav">Your California Privacy Choices</a>
+        <a href="" class="footer-nav">User Agreement</a>
+        <a href="" class="footer-nav">Accessability</a>
+        <a href="" class="footer-nav">Sitemap</a>
+      </div>
+      <div class="line-2">
+        <img src="./Images/Logo.png" alt="Linkedin Logo" class="footer-logo" />
+        <p class="copyrights">© LinkedIn Corporation 2023</p>
+      </div>
+      <div class="line-3">
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-square-facebook"></i>
+        <i class="fa-solid fa-rss"></i>
+      </div>
+    </footer>
+  </body>
 </html>
